# IntroProg24

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: array.cpp.340CC413BE4B2030.idx  array.h.47FC7EA752B9AC6D.idx  color.h.25AD4272F8B88850.idx  core.h.A9DDB9BB9923B89B.idx  format-inl.h.9BADD35BECB2AD89.idx  format.cc.9B074BBB7409043A.idx  format.h.F63D4B1E9908EAF2.idx  main.cpp.4067F43507E64CCE.idx  mssm.h.F83DACED9BF36CB7.idx  paths.cpp.74369DE298B67213.idx  paths.h.22F27F2B6B69F123.idx  platform_folders.cpp.B98055740BD77599.idx  platform_folders.h.2A98558D5D786339.idx  rand.cpp.EACF535A9E301530.idx  rand.h.CD3A3E68DEBCC6BD.idx  whereami.c.B35FFED7D97AC0C6.idx  whereami.h.364857A7555013C9.idx
ArrayFuncs/: CMakeLists.txt  main.cpp
ArrayFuncs/utility/: rand.h
Asteroids/AnotherDirectoryForSomeReason/: CMakeLists.txt  Info.plist  asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  main.cpp  pluh.h  ship.cpp  ship.h
Asteroids/AnotherDirectoryForSomeReason/.cache/clangd/index/: array.cpp.8B1E6D65EBC756F5.idx  array.h.6F90D37D8E38B99A.idx  asteroid.cpp.8EBADC8C6F14D764.idx  asteroid.h.E858712321730375.idx  color.h.37AE79250C90E723.idx  context.c.08558A5E466881CE.idx  core.h.634BB74686ADB64F.idx  dr_flac.h.2AF2E4F07C279E27.idx  dr_impl.cpp.C7468B4AE6E3B839.idx  dr_mp3.h.E87776771A35CAE7.idx  dr_wav.h.A49D4E0D9FE7BF0D.idx  egl_context.c.0A0C85C69A472D82.idx  fontstash.h.5F0A13702526CAD9.idx  format-inl.h.632ED665159D8D17.idx  format.cc.B62A4C0AD29A7C11.idx  format.h.87571BF9EAD3F399.idx  format_helper.h.2D5089E25F15617E.idx  glew.c.B46979A1CFAA569A.idx  glew.h.9E6D76624F962A28.idx  glfw3.h.340DAC25883294B7.idx  glx_context.c.ADD4C2EA03DD3C04.idx  glxew.h.361F048219AE80E5.idx  graphics.cpp.92854A16B1A3CF6B.idx  graphics.h.8A005937AE7A7F93.idx  init.c.B85DA41653B23B34.idx  input.c.28A62FF92489C200.idx  internal.h.DA987CB9BE3A37C2.idx  linux_joystick.c.DE08E3450023844F.idx  linux_joystick.h.CE6C1AB8179049DE.idx  main.cpp.CC8DA4370FAE6318.idx  mappings.h.E3C177F9831636B7.idx  miniaudio.h.EEF7BAF31116C412.idx  monitor.c.92DAAF09807AB4D6.idx  nanovg.c.AFDCE171ABC711E7.idx  nanovg.h.B031C418B8F6A645.idx  nanovg_gl.h.AE37D34742AA4BB9.idx  null_init.c.9F2B2FBEC0B688A1.idx  null_joystick.c.2EE0A06204B49468.idx  null_joystick.h.3E7DD1A6A3D312D4.idx  null_monitor.c.CE0FB0AF9A7F762F.idx  (+79 more)
Asteroids/AnotherDirectoryForSomeReason/assets/sounds/: WikiLeaks - Vault 7 Projects.html
Asteroids/AnotherDirectoryForSomeReason/comm/: tcpserver.cpp
Asteroids/AnotherDirectoryForSomeReason/graphics/: camera.cpp  camera.h  graphics.cpp  graphics.h  objcanvas.h  svgcanvas.h  vec2d.h
Asteroids/AnotherDirectoryForSomeReason/subProj/: CMakeLists.txt
Asteroids/AnotherDirectoryForSomeReason/subProj/CMakeModules/: InstallDepLibs.cmake
Asteroids/AnotherDirectoryForSomeReason/subProj/utility/: rand.cpp
Asteroids/AnotherDirectoryForSomeReason/utility/: array.h  paths.h  rand.h
BotBattleClient/: CMakeLists.txt  README.md  dylanTools.h  main.cpp  main2.cpp  readme.txt  world.cpp  world.h
BotBattleClient/botbattle/: bot.cpp  bot.h  botai.cpp  botai.h  botcmd.cpp  botcmd.h  botmanager.cpp  botmanager.h  connectedbot.cpp  connectedbot.h  drawingcanvas.cpp  drawingcanvas.h  graphicscanvas.cpp  graphicscanvas.h
BotBattleClient/graphics/: graphics.cpp  graphics.h  objcanvas.cpp  svgcanvas.cpp
BotBattleClient/utility/: array.h  format_helper.h
C-Calc/: CMakeLists.txt  LICENSE  main.cpp
C-Calc/utility/: array.h  paths.cpp
Change-Calc/: CMakeLists.txt  main.cpp
Change-Calc/.cache/clangd/index/: array.cpp.2C2C9FC3570EE9B8.idx  array.h.811C140E77B585C2.idx  color.h.3EA2C632B379E2E9.idx  core.h.B06758695A0BAC84.idx  format-inl.h.446243DBD2B77B6E.idx  format.cc.FB06D5533DB41775.idx  format.h.65B9B75001C5C7F3.idx  main.cpp.1F58115C12F5D8D1.idx  mssm.h.8BFB1D3BD1E4443F.idx  paths.cpp.5870ADA4DDF2A468.idx  paths.h.E2D8A58577434180.idx  platform_folders.cpp.841645CA9B48C3F6.idx  platform_folders.h.B2DD78CBC8506F79.idx  rand.cpp.A1361185A35FEC3C.idx  rand.h.BE89050AD4940979.idx  whereami.c.9A505610B67BE231.idx  whereami.h.4D0A8FE21069EA4A.idx
IntroProgGraphical/: .gitignore  main.cpp
IntroProgGraphical/assets/sounds/WikiLeaks - Vault 7 Projects_files/: leak-styles.css
IntroProgGraphical/comm/: tcpserver.h
IntroProgGraphical/graphics/: vec2d.h
IntroProgGraphical/subProj/: main.cpp  tests.cpp
IntroProgGraphical/subProj/assets/sounds/: beats-goldn-116392-license.txt
IntroProgGraphical/subProj/comm/: serialport.cpp  serialport.h
IntroProgGraphical/subProj/graphics/: graphics.h  graphics_other.cpp  svgcanvas.h
IntroProgGraphical/subProj/utility/: array.cpp
Yahtzee/: CMakeLists.txt  main.cpp  mssm.h
Yahtzee/utility/: array.h
practice functions/: main.cpp  mssm.h
